--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,6 +33,9 @@ jobs:
             python-version: ${{ matrix.python-version }}
         name: 'Setup python'
       - shell: bash
+        run: python install.py
+        name: 'Install standard dependencies'
+      - shell: bash
         run: python -m pip install pytest
         name: 'Install testing dependencies'
       - shell: bash
