--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,7 +16,6 @@ jobs:
         matrix:
             os: ["ubuntu-latest"]
             python-version: ["3.10", "3.11"]
-            dependencies-version-type: ["minimal", "latest"]
             include:
               - os: "ubuntu-latest"
                 os-name: "Ubuntu"
@@ -39,6 +38,6 @@ jobs:
         run: python -m pip install pytest
         name: 'Install testing dependencies'
       - shell: bash
-        run: pytest -n auto
+        run: pytest
         working-directory: ${{ runner.temp }}
         name: 'Run tests'
