--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,9 @@ jobs:
               - os: "ubuntu-latest"
                 os-name: "Ubuntu"
               - python-version: "3.11"
+                packages: "jsonschema"
               - python-version: "3.10"
+                packages: "jsonschema toml"
     name: ${{ matrix.os-name }} with Python ${{ matrix.python-version }}
     defaults:
       run:
@@ -32,7 +34,7 @@ jobs:
             python-version: ${{ matrix.python-version }}
         name: 'Setup python'
       - shell: bash
-        run: python install.py
+        run: python -m pip install ${{ matrix.packages }}
         name: 'Install standard dependencies'
       - shell: bash
         run: python -m pip install pytest
